name:                opengl-implicit
version:             0.1.0.0
homepage:            https://github.com/stla/opengl-implicit#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description: build the executables
  default:     True

library
  hs-source-dirs:      src
  exposed-modules:     MarchingCubes.MarchingCubes
                     , MarchingCubes.CTypes
                     , MarchingCubes.OpenGL
                     , MarchingCubes
                     , Goursat
  build-depends:       base >= 4.7 && < 5
                     , extra
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
  default-language:    Haskell2010
  other-extensions:    ForeignFunctionInterface
  ghc-options:         -Wall
  include-dirs:        C
  C-sources:           C/marchingcubes.c

source-repository head
  type:     git
  location: https://github.com/stla/opengl-implicit
